# caller-agent

./: .gitignore  CUsers61422DesktopOMSCSprojectsLLMcaller-agentterraformflow_content.json  README.md  app.py  cdk.json  flow_with_logging.json  main.py  pyproject.toml
.claude/: settings.local.json
config/: agent_instructions.txt  contact_flow.json
lambda_functions/agent_action_handler/: index.py
schemas/: openapi_schema.json
stacks/: caller_agent_stack.py
terraform/: .terraform.tfstate.lock.info  bedrock.tf  connect.tf  dynamodb.tf  lambda.tf  lex.tf  main.tf  outputs.tf  sns.tf  terraform.tfstate.1770969877.backup  terraform.tfstate.1770970791.backup  terraform.tfstate.1770970816.backup  terraform.tfstate.1770970819.backup  terraform.tfstate.1770970845.backup  terraform.tfstate.1770970848.backup  terraform.tfvars.example  variables.tf
